--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ site_description = "Pratama Bayu Widagdo is Designer, Programmer, and Lecturer"
 site_slogan = "Designer, Programmer, and Lecturer"
 site_keywords = "Pratama Bayu Widagdo, Personal, Designer, Programmer, Lecturer"
 created_by_name = "Pratama Bayu Widagdo"
-created_by_url = "https://pratamabayu.com"
+created_by_url = "https://github.com/pratamabayu"
 copyright_years = "2014 - 2022"
 
 project_categories = ["Interactive Media", "Desktop App", "Mobile App"]
