--- a/config.toml
+++ b/config.toml
@@ -13,9 +13,9 @@ codeFences = false
 google_analytics_id = "UA-105480363-1"
 site_name = "Pratama Bayu Widagdo"
 site_url = "https://pratamabayu.com"
-site_description = "Pratama Bayu Widagdo is Designer, Programmer, and Lecturer"
-site_slogan = "Designer, Programmer, and Lecturer"
-site_keywords = "Pratama Bayu Widagdo, Personal, Designer, Programmer, Lecturer"
+site_description = "Pratama Bayu Widagdo is Designer, Programmer, and Learner"
+site_slogan = "Designer, Programmer, and Learner"
+site_keywords = "Pratama Bayu Widagdo, Personal, Designer, Programmer, Learner"
 created_by_name = "Pratama Bayu Widagdo"
 created_by_url = "https://github.com/pratamabayu"
 copyright_years = "2014 - 2024"
